<resources>
    <string name="app_name">Hamkorbank</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_activty_card">ActivtyCard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Hide balanse</string>

    <string name="menu_home">Main</string>
    <string name="menu_gallery">Payments</string>
    <string name="menu_slideshow">Add card</string>
    <string name="splash_image">splash image</string>
    <string name="login_text">Login</string>
    <string name="welcome">Welcome!</string>
    <string name="phone_number">Phone SMS notifications</string>
    <string name="login">SING IN</string>
    <string name="label">Login</string>
    <string name="next">NEXT</string>
    <string name="password">Password</string>
    <string name="tv_text">Ma\'lumotlar kiriting</string>
    <string name="card_number">Card number</string>
    <string name="card_date">Validity of the card (MMYY)</string>
    <string name="save">Saqlash</string>
    <string name="pin_code">Enter PIN code</string>
    <string name="code_title">Call</string>
    <string name="error_name">Such user is not found in this device Please,register your card again</string>
    <string name="list_null">Ism yoki parol bo\'sh</string>
    <string name="save_name">"To continue you must read the terms of the public offer"</string>
    <string name="card_date_save">Karta raqami yoki muddati xato</string>
    <string name="error_code">Kod xato qartadan kiriting</string>
    <string name="action_sms">News</string>
    <string name="action_scanner">Qr code</string>
    <string name="Total_amount">Total amount</string>
    <string name="money">745 656.00 UZS</string>
    <string name="uzs">UZS</string>
    <string name="usd">USD</string>
    <string name="last_payments">Last payments</string>
    <string name="registration">REGISTRATION</string>
    <string name="payment_text">Payment</string>
    <string name="surname">Eshboboyev</string>
    <string name="lastname">Jamshid</string>
    <string name="usd_exchage">USD ($)</string>
    <string name="buy_uzs">Buy:10 520.00 uzs</string>
    <string name="usd_sale">Sale:10 580.00 uzs</string>
    <string name="uzs_uzs">UZS USD ($)</string>
    <string name="usd_uzs">USD ($) UZS</string>
    <string name="conversion">Conversion history</string>
    <string name="add_card">Add card</string>
    <string name="online_application">Online application for card</string>
    <string name="virtual_card">Open virtual card</string>
    <string name="ipoteka">Ipoteka</string>
    <string name="mycard_money">765 456.00 UZS</string>
    <string name="mycard_num">8600 33** **** 9392</string>
    <string name="my_card">My card</string>
    <string name="card_item">02 / 11</string>
    <string name="exchage">Online exchange</string>
    <string name="balanse">Balance</string>
    <string name="choose">Choose the account</string>
    <string name="ipoteka_bank">Ipoteke - 8600 33** **** 9392</string>
    <string name="recipientds">Recipient\'s card number</string>
    <string name="phone">Phone number</string>
    <string name="qr_code">QR CODE</string>
    <string name="card_name">Card name</string>
    <string name="card_expiry">Card expiry</string>
    <string name="lets_grow">LETS GROW TOGETHER</string>
    <string name="joint_strock">Joint Stock Commercial Bank with Foreign Capital \"Hamkorbak\"</string>
    <string name="mfo">MFO</string>
    <string name="emloyee">Employee Id</string>
    <string name="forgot">Forgot?</string>
    <string name="name">Name</string>
</resources>