<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">




    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:text="@string/balanse"/>



    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:text="@string/mycard_money"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/ipoteka_bank"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginStart="10dp"
        android:textColor="@color/status_bar"
        android:layout_marginTop="15dp"
        android:text="@string/choose"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipientds"
        app:boxBackgroundColor="@color/white"
        app:hintTextColor="@color/status_bar"
        app:boxStrokeColor="@color/status_bar"
        android:layout_marginTop="25dp"
        android:textColorHint="@color/black"
        android:layout_margin="@dimen/default_margin">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:textColorHint="@color/status_bar"
            android:id="@+id/ed_card_number"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="@color/red"
        android:text="Or"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/phone"
        app:endIconDrawable="@drawable/edit_account_circle_24"
        app:hintTextColor="@color/status_bar"
        app:boxStrokeColor="@color/status_bar"
        app:boxBackgroundColor="@color/white"
        android:textColorHint="@color/black"
        android:layout_margin="@dimen/default_margin"

        >

        <uz.invan.reduz.presentation.custom.maskedEditText.MaskedEditText
            android:id="@+id/phone_umber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="number"
            android:focusable="true"
            android:inputType="phone"
            android:textSize="18sp"
            app:mask="+998 (##) ### ## ##"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:background="@drawable/bt_singin_color"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_weight="1"
            android:textColor="@color/status_bar"
            android:layout_marginTop="10dp"
            android:text="AVAILABLE \n BANKS"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/status_bar"
            android:layout_marginTop="10dp"
            android:text="@string/qr_code"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>