<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/lc_exchange_top"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_exchange_usd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:text="@string/usd_exchage"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_exchange_buy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="start|center_vertical"
                android:text="@string/buy_uzs"
                android:textSize="18sp"
                android:textColor="@color/black"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_exchange_sale"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:gravity="start|center_vertical"
                android:text="@string/usd_sale"
                android:textSize="18sp"
                android:textColor="@color/black"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>


   <androidx.appcompat.widget.LinearLayoutCompat
       android:layout_width="match_parent"
       android:orientation="horizontal"
       android:id="@+id/lc_excahge_bt"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       app:layout_constraintTop_toBottomOf="@+id/lc_exchange_top"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent">

       <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/bt_uzs_usd"
           android:layout_marginEnd="10dp"
           android:layout_marginBottom="0dp"
           android:layout_width="wrap_content"
           android:layout_weight="1"
           android:layout_marginStart="10dp"
           android:layout_height="40dp"
           android:text="@string/uzs_uzs"
           android:textColor="@color/white"
           android:background="@drawable/bt_onclick"
           />

       <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/bt_usd_uzs"
           android:layout_marginEnd="10dp"
           android:layout_marginStart="10dp"
           android:layout_marginBottom="5dp"
           android:layout_width="wrap_content"
           android:layout_weight="1"
           android:layout_height="40dp"
           android:text="@string/usd_uzs"
           android:textColor="@color/white"
           android:background="@drawable/bt_onclick"
           />
   </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/lc_excahge_bt"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_exchange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_two"
        android:text="@string/conversion"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>