<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:counter="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"
        />
  <!--  <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline_first">
       -->
    <me.thanel.swipeactionview.SwipeActionView
        android:id="@+id/ld_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Total_amount"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/status_bar"/>
            <com.github.premnirmal.textcounter.CounterView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="22sp"
                android:gravity="center"
                android:textColor="@color/black"
                counter:autoStart="true"
                counter:startValue="0"
                counter:endValue="765564"
                counter:incrementValue="10000"
                counter:timeInterval="0.001"
                counter:suffix=".00 UZS"
                android:id="@+id/counters"
                counter:type="integer"
                />
          <!--  <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="22sp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:text="@string/money"/>-->
        </androidx.appcompat.widget.LinearLayoutCompat>
    </me.thanel.swipeactionview.SwipeActionView>
   <!-- </androidx.core.widget.NestedScrollView>-->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:id="@+id/lin_button"
        app:layout_constraintTop_toBottomOf="@+id/ld_main"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_uzs"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:text="@string/uzs"
            android:textColor="@color/white"
            android:background="@drawable/bt_onclick"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_usd"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:text="@string/usd"
            android:background="@drawable/bt_color"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/view_lines"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/lin_button"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/card_rec"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/view_lines"
        app:layout_constraintBottom_toTopOf="@id/guideline_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_rec"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/view_bottom_lines" />

    <View
        android:id="@+id/view_bottom_lines"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@id/tv_bottom"
        android:background="@color/black" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:paddingBottom="4dp"
        android:text="@string/last_payments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
         />



</androidx.constraintlayout.widget.ConstraintLayout>